// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithTranslationContextComponent
  translations={null}
>
  <NewPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "changePassword": "Change password",
        "newPassword": "New password",
        "repeatNewPassword": "Repeat new password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="newPassword"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="New password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="newPassword"
              >
                <div
                  className="label"
                >
                  New password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="newPassword"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="newPasswordRepeat"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Repeat new password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="newPasswordRepeat"
              >
                <div
                  className="label"
                >
                  Repeat new password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="newPasswordRepeat"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Change password"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Change password
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </NewPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  error="Error message"
  footer={
    <a
      href="http://example.com"
    >
      link
    </a>
  }
  logo="http://satyr.io/100x100/33?text=logo"
  title="Company"
  translations={null}
>
  <NewPassword
    error="Error message"
    footer={
      <a
        href="http://example.com"
      >
        link
      </a>
    }
    logo="http://satyr.io/100x100/33?text=logo"
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title="Company"
    translations={
      Object {
        "changePassword": "Change password",
        "newPassword": "New password",
        "repeatNewPassword": "Repeat new password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="title"
      >
        Company
      </div>
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="error"
          >
            Error message
          </div>
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="newPassword"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="New password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="newPassword"
              >
                <div
                  className="label"
                >
                  New password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="newPassword"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="newPasswordRepeat"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Repeat new password"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="newPasswordRepeat"
              >
                <div
                  className="label"
                >
                  Repeat new password
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="newPasswordRepeat"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Change password"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Change password
              </span>
            </button>
          </Button>
        </form>
        <div
          className="footer"
        >
          <a
            href="http://example.com"
          >
            link
          </a>
        </div>
      </div>
    </div>
  </NewPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with translations 1`] = `
<WithTranslationContextComponent
  translations={
    Object {
      "changePassword": "Změnit heslo",
      "newPassword": "Nové heslo",
      "repeatNewPassword": "Nové heslo znovu",
    }
  }
>
  <NewPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "changePassword": "Změnit heslo",
        "newPassword": "Nové heslo",
        "repeatNewPassword": "Nové heslo znovu",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="mb-3"
          >
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="newPassword"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Nové heslo"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="newPassword"
              >
                <div
                  className="label"
                >
                  Nové heslo
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="newPassword"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
            <TextField
              changeHandler={[Function]}
              disabled={false}
              fieldId="newPasswordRepeat"
              fullWidth={true}
              helperText={null}
              inputSize={null}
              isLabelVisible={true}
              label="Nové heslo znovu"
              layout="vertical"
              placeholder={null}
              required={true}
              size="medium"
              type="password"
              validationState={null}
              variant="outline"
            >
              <label
                className="root
        isRootFullWidth
        rootLayoutVertical
        isRootRequired
        rootSizeMedium
        
        rootVariantOutline"
                htmlFor="newPasswordRepeat"
              >
                <div
                  className="label"
                >
                  Nové heslo znovu
                </div>
                <div
                  className="inputContainer"
                >
                  <input
                    className="input"
                    disabled={false}
                    id="newPasswordRepeat"
                    onChange={[Function]}
                    placeholder={null}
                    required={true}
                    size={null}
                    type="password"
                  />
                </div>
              </label>
            </TextField>
          </div>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            label="Změnit heslo"
            labelVisibility="all"
            loading={false}
            priority="default"
            size="medium"
            type="submit"
            variant="primary"
          >
            <button
              className="root
        priorityDefault
        sizeMedium
        variantPrimary
        isRootBlock"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span
                className="label"
              >
                Změnit heslo
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </NewPassword>
</WithTranslationContextComponent>
`;
